Added images and finish basic static page layout

--- a/index.html
+++ b/index.html
@@ -2,11 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Where's Waldo</title>
   </head>
 
   <body>
+    <h2>Where's Waldo</h2>
+    <span class="timer">Locate and click on the three targets to win!</span>
+    <button class="start-button">Start game</button>
+    <div class="images-container">
+      <div class="targets">
+        <div class="target">
+          <img src="images/target1.png" alt="target1" />
+          <span>Target 1</span>
+        </div>
+        <div class="target">
+          <img src="images/target2.png" alt="target2" />
+          <span>Target 2</span>
+        </div>
+        <div class="target">
+          <img src="images/target3.png" alt="target3" />
+          <span>Target 3</span>
+        </div>
+      </div>
+      <div class="main-image">
+        <img src="images/dbm2.png" alt="dbm2" />
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
