Added image map and timer

--- a/index.html
+++ b/index.html
@@ -26,9 +26,26 @@
         </div>
       </div>
       <div class="main-image">
-        <img src="images/dbm2.png" alt="dbm2" />
+        <img src="images/dbm2.png" alt="dbm2" usemap="#image-map" />
+        <map name="image-map">
+          <area
+            coords="789,642,51"
+            shape="circle"
+            onclick="target1Discovered()"
+          />
+          <area
+          coords="268,738,40"
+          shape="circle"
+          onclick="target2Discovered()"
+        />
+        <area
+        coords="902,482,26"
+        shape="circle"
+        onclick="target3Discovered()"
+      />
+        </map>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
