Refactored timer and targets logic

--- a/index.html
+++ b/index.html
@@ -28,21 +28,9 @@
       <div class="main-image">
         <img src="images/dbm2.png" alt="dbm2" usemap="#image-map" />
         <map name="image-map">
-          <area
-            coords="789,642,51"
-            shape="circle"
-            onclick="target1Discovered()"
-          />
-          <area
-          coords="268,738,40"
-          shape="circle"
-          onclick="target2Discovered()"
-        />
-        <area
-        coords="902,482,26"
-        shape="circle"
-        onclick="target3Discovered()"
-      />
+          <area class="target1" coords="789,642,51" shape="circle" />
+          <area class="target2" coords="268,738,40" shape="circle" />
+          <area class="target3" coords="902,482,26" shape="circle" />
         </map>
       </div>
     </div>
