Modal reads rankings from database

--- a/index.html
+++ b/index.html
@@ -43,19 +43,23 @@
         <div class="highscores-message">
           <div>Congratulations!</div>
           <div>You've made a high score!</div>
+          <div class="username-input-container">
+            <input class="username-input" type="text" placeholder="Enter your name here">
+            <button class="username-submit-btn">Submit</button>
+          </div>
         </div>
         <div class="highscores">
-          <div class="highscore-container">
-            <span class="player-name">#1: Player</span
-            ><span class="highscore-value">xs</span>
+          <div class="highscore-container" data-rank="1">
+            <span>#1: <span class="player-name">Player</span></span>
+            <span><span class="highscore-value">x</span> s</span>
           </div>
-          <div class="highscore-container">
-            <span class="player-name">#2: Player</span
-            ><span class="highscore-value">xs</span>
+          <div class="highscore-container" data-rank="2">
+            <span>#2: <span class="player-name">Player</span></span>
+            <span><span class="highscore-value">x</span> s</span>
           </div>
-          <div class="highscore-container">
-            <span class="player-name">#3: Player</span
-            ><span class="highscore-value">xs</span>
+          <div class="highscore-container" data-rank="3">
+            <span>#3: <span class="player-name">Player</span></span>
+            <span><span class="highscore-value">x</span> s</span>
           </div>
         </div>
         <button class="play-again-button">Play again</button>
