Added endGame and modalNewHighscorer

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
         <button class="play-again-button">Play again</button>
       </div>
     </dialog>
+    <dialog class="general-modal">
+      <button class="play-again-button">Play again</button>
+    </dialog>
     <script src="main.js" type="module"></script>
   </body>
 </html>
